<resources>
    <string name="app_name">PetsPassion_Admin</string>
    <string name="admin_title">Pets Passion Admin</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link">Send Reset Link</string>
    <string name="home">Home</string>
    <string name="insert">Insert</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_product">Insert Product</string>
    <string name="insert_categories">Insert Categories</string>
    <string name="show_categories">Show Categories</string>
    <string name="insert_a_new_category">Insert A New Categorie</string>
    <string name="category_image">Categories Image</string>
    <string name="category_name">Categorie Name</string>
    <string name="add_category">Add Categories</string>
    <string name="insert_a_new_product">Insert A New Product</string>
    <string name="image">Image</string>
    <string name="product_image_">Product Image</string>
    <string name="categories">Categories</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price_item">Product price item</string>
    <string name="discounted_price">Discounted price</string>
    <string name="product_price">Product price</string>
    <string name="product_discount_item">Product discount item</string>
    <string name="product_discount">Product discount</string>
    <string name="product_quantity_item">Product quantity item</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_description">Product description</string>
    <string name="update_category">Update Category</string>
    <string name="enter_product_name_or_price">Enter Product Name or Price</string>
    <string name="no_products_found">No Products Found</string>
    <string name="more_options">More Options</string>
    <string name="product_name_item">Product Name Item</string>
    <string name="back">Back</string>
    <string name="update_product">Update product</string>
    <string name="profile_image">Profile Image</string>
    <string name="email_address">example@gmail.com</string>
    <string name="account_info">Account Info</string>
    <string name="todo">TODO</string>
    <string name="not_set">Not set</string>
    <string name="address">Address</string>
    <string name="logout">LogOut</string>
    <string name="name">Name</string>
    <string name="email_hints">Email</string>
    <string name="mobile">Mobile</string>
    <string name="log_out">Log Out</string>
    <string name="inserta_title">Insert Product</string>



</resources>