<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        app:cardCornerRadius="21dp">

        <LinearLayout
            android:id="@+id/product_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/custom_border"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/initial_image"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/menu_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu_dot"
                    android:contentDescription="@string/more_options"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="11dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name_item"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp"

                        android:paddingTop="10dp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price_item"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/product_D_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discounted_price"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="italic" />


                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/holo_red_dark" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_discount_item"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/product_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_discount"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/black" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity_item"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/black" />
                </LinearLayout>


                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
