<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adminHome"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/update_to_admin_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_sign"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_product"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="4dp"
        app:cardCornerRadius="21dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/white_background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/update_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/product_image_"
                    android:scaleType="centerCrop"
                    android:src="@drawable/initial_image" />

                <EditText
                    android:id="@+id/update_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_name"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/update_categories"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/categories"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,KeyboardInaccessibleWidget,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/update_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_description"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/update_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <EditText
                    android:id="@+id/update_product_Discount"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_discount"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <EditText
                    android:id="@+id/update_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_quantity"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <Button
                    android:id="@+id/update_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/update_category"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
