<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/adminHome">

    <ImageView
        android:id="@+id/insert_admin_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_sign"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/insert_a_new_product"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="4dp"
        app:cardCornerRadius="21dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/white_background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/product_image_"
                    android:scaleType="centerCrop"
                    android:src="@drawable/initial_image" />

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_name"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/categories"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,KeyboardInaccessibleWidget,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/etProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_description"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/etProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <EditText
                    android:id="@+id/etProductDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_discount"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <EditText
                    android:id="@+id/etProductQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/product_quantity"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:ignore="Autofill,RtlSymmetry" />

                <Button
                    android:id="@+id/btnAddProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/lavender"
                    app:cornerRadius = "20dp"
                    android:padding="8dp"
                    android:text="@string/add_product" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>



</RelativeLayout>
