<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/adminHome"
    tools:context=".Login_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textColor="#8196D5"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textStyle="italic" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/loge_in_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/login_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textStyle="italic"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/login_password_show_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignStart="@+id/etPassword"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/show_password"
                    android:textStyle="italic"
                    tools:ignore="ObsoleteLayoutParam" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#3264F4"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/log_in"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/lavender"
                app:cornerRadius = "20dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>